@@ -37,6 +37,7 @@
 - Fix grainline position on layout.
 - [#719] Valentina crashes when unite pieces.
 - Fixed Valentina crash. Used way to avoid Qt's bug QTBUG-61213.
+- Fixed behaviour on Windows. Valentina asks about synchronization measurements twice.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
